--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -14,7 +14,7 @@
                     <span class="p-inputgroup-addon"><i class="pi pi-lock"></i></span>
                 </div>
                 <div class="p-d-flex p-jc-center">
-                    <button pButton type="submit" (click)="login()" label="Login" icon="pi pi-sign-in" ></button>
+                    <button [disabled]="myForm.invalid" pButton type="submit" (click)="login()" label="Login" icon="pi pi-sign-in" ></button>
                 </div>
             </form>
             <p-divider align="center" type="dashed">
@@ -28,3 +28,13 @@
         </p-card>
     </div>
 </div>
+
+
+<p-dialog header="Error en el login" [(visible)]="display">
+    <p>
+        {{error}}
+    </p>
+    <ng-template pTemplate="footer">
+        <p-button icon="pi pi-check" (click)="display=false" label="Ok" styleClass="p-button-text"></p-button>
+    </ng-template>
+</p-dialog>
