--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -18,7 +18,7 @@
                     <span class="p-inputgroup-addon"><i class="pi pi-lock"></i></span>
                 </div>
                 <div class="p-d-flex p-jc-center p-mt-3">
-                    <button pButton type="submit" label="Sign Up" icon="pi pi-user-plus" (click)="singup()"></button>
+                    <button [disabled]="myform.invalid" pButton type="submit" label="Sign Up" icon="pi pi-user-plus" (click)="singup()"></button>
                 </div>
             </form>
             <p-divider align="center" type="dashed">
@@ -32,3 +32,12 @@
         </p-card>
     </div>
 </div>
+
+<p-dialog header="Error en el login" [(visible)]="display" dismissableMask=true>
+    <p>
+        {{error}}
+    </p>
+    <ng-template pTemplate="footer">
+        <p-button icon="pi pi-check" (click)="display=false" label="Ok" styleClass="p-button-text"></p-button>
+    </ng-template>
+</p-dialog>
