--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -18,7 +18,8 @@
                     <span class="p-inputgroup-addon"><i class="pi pi-lock"></i></span>
                 </div>
                 <div class="p-d-flex p-jc-center p-mt-3">
-                    <button [disabled]="myform.invalid" pButton type="submit" label="Sign Up" icon="pi pi-user-plus" (click)="singup()"></button>
+                    <button *ngIf="!loading" [disabled]="myform.invalid" pButton type="submit" label="Sign Up" icon="pi pi-user-plus" (click)="singup()"></button>
+                    <button *ngIf="loading" [disabled]="true" pButton type="submit" label="Please wait" icon="pi pi-spin pi-spinner" (click)="singup()"></button>
                 </div>
             </form>
             <p-divider align="center" type="dashed">
