Mostrar informacion del usuario por medio de ngrx/store

--- a/src/app/shared/components/menu-bar/menu-bar.component.html
+++ b/src/app/shared/components/menu-bar/menu-bar.component.html
@@ -4,8 +4,10 @@
     </ng-template>
     <ng-template pTemplate="end">
         <div class="p-d-flex p-ac-center">
-            <p-chip label="Text with image" image="assets/showcase/images/avatar/user.png" class="p-ml-6 p-mt-1 p-mr-2"></p-chip>
-            <p-splitButton label="Sign off" icon="pi pi-sign-out" (click)="logout()" [model]="items1" styleClass="p-button-secondary"></p-splitButton>
+            <p-chip *ngIf="username" [label]="username" icon="pi pi-user" class="p-ml-6 p-mt-1 p-mr-2"></p-chip>
+            <p-chip *ngIf="!username" label="not logged in" icon="pi pi-user-minus" class="p-ml-6 p-mt-1 p-mr-2"></p-chip>
+            <p-splitButton *ngIf="username" label="Sign off" icon="pi pi-sign-out" (onClick)="logout()" [model]="items1" styleClass="p-button-secondary"></p-splitButton>
+            <button *ngIf="!username" pButton pRipple type="button" routerLink="/auth/login" label="LogIn" class="p-button-outlined"></button>
         </div>
     </ng-template>
 </p-menubar>
