--- a/src/app/carts/pages/current-cart/current-cart.component.html
+++ b/src/app/carts/pages/current-cart/current-cart.component.html
@@ -1,1 +1,41 @@
-<p>current-cart works!</p>
+<div class="p-d-flex p-flex-column">
+    <div class="p-mb-2 p-mt-2">
+        <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
+    </div>
+    <p-table  [value]="products">
+      <ng-template pTemplate="caption">
+          <div class="p-d-flex p-ai-center p-jc-between">
+              Products
+              <button pButton pRipple type="button"
+                      icon="pi pi-send" iconPos="right"
+                      label="Orden Cart" class="p-button-success"
+                      (click)="ordenCart()"></button>
+          </div>
+      </ng-template>
+      <ng-template pTemplate="header">
+          <tr>
+              <th>Name</th>
+              <th>Price</th>
+              <th>Category</th>
+              <th>Status</th>
+              <th>Actions</th>
+          </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-product>
+          <tr>
+              <td>{{product.name}}</td>
+              <td>{{product.price | currency:'USD'}}</td>
+              <td>{{product.category}}</td>
+              <td><span [class]="'product-badge status-' + product.inventoryStatus.toLowerCase()">{{product.inventoryStatus}}</span></td>
+              <td><button pButton pRipple type="button" label="Delete" class="p-button-danger" icon="pi pi-times" iconPos="right" (click)="deleteProduct(product)"></button>
+              </td>
+            </tr>
+      </ng-template>
+      <ng-template pTemplate="summary">
+          <div class="p-d-flex p-ai-center p-jc-between">
+              In total there are {{products ? products.length : 0 }} products.
+          </div>
+      </ng-template>
+    </p-table>
+</div>
+<p-toast position="bottom-left"></p-toast>
