--- a/src/app/products/pages/list-products/list-products.component.html
+++ b/src/app/products/pages/list-products/list-products.component.html
@@ -3,7 +3,22 @@
         <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
     </div>
     <p-card class="card">
-        <p-dataView #dv [value]="products" [paginator]="true" [rows]="9" filterBy="name" [sortField]="sortField" [sortOrder]="sortOrder" layout="grid">
+        <div *ngIf="loading" class="custom-skeleton p-p-4">
+            <div class="p-d-flex p-mb-3">
+                <p-skeleton shape="circle" size="4rem" styleClass="p-mr-2"></p-skeleton>
+                <div>
+                    <p-skeleton width="10rem" styleClass="p-mb-2"></p-skeleton>
+                    <p-skeleton width="5rem" styleClass="p-mb-2"></p-skeleton>
+                    <p-skeleton height=".5rem"></p-skeleton>
+                </div>
+            </div>
+            <p-skeleton width="100%" height="150px"></p-skeleton>
+            <div class="p-d-flex p-jc-between p-mt-3">
+                <p-skeleton width="4rem" height="2rem"></p-skeleton>
+                <p-skeleton width="4rem" height="2rem"></p-skeleton>
+            </div>
+        </div>
+        <p-dataView *ngIf="!loading" #dv [value]="products" [paginator]="true" [rows]="9" filterBy="name" [sortField]="sortField" [sortOrder]="sortOrder" layout="grid">
             <ng-template pTemplate="header">
                 <div class="p-d-flex p-flex-column p-flex-md-row p-jc-md-between">
                     <p-dropdown [options]="sortOptions" placeholder="Sort By Price" (onChange)="onSortChange($event)" styleClass="p-mb-2 p-mb-md-0"></p-dropdown>
@@ -50,7 +65,7 @@
                         </div>
                         <div class="product-grid-item-bottom">
                             <span class="product-price">${{product.price}}</span>
-                            <p-button icon="pi pi-shopping-cart" [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"></p-button>
+                            <p-button icon="pi pi-shopping-cart" [disabled]="product.inventoryStatus === 'OUTOFSTOCK'" (click)="addCart(product)"></p-button>
                         </div>
                     </div>
                 </div>
@@ -58,3 +73,4 @@
         </p-dataView>
     </p-card>
 </div>
+<p-toast position="bottom-right"></p-toast>
